# Code-Generator

./: .gitignore  __init__.py  codegenerator.py  example.py  language.py  main.py  readme.md  setup.cfg  string_builder.py  type.py
builders/: __init__.py  class_builder.py  code_builder.py  file_builder.py
elm/src/: Types.elm
python/: types.py
src/codegen/: codegenerator.py  language.py
