[metadata]
name = codegen
description = Generate Python and Elm DTOs to increase type safety.
author = Thomas Poelman
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.11

[options]
packages =
    codegen
python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.packages.find]
where = src

[options.package_data]
codegen = py.typed
